--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li id="navButton"><a href="#aboutMe" class="nav-link">ABOUT</a></li>
             <li id="navButton"><a href="#projectTitle" class="nav-link">PROJECTS</a></li>
             <li id="homeButton"><a href="#home" class="home-link">HOME</a></li>
-            <li id="navButton"><a href="assets/RachelDeckardResumePDF.pdf" target="_blank" class="nav-link">RESUME</a></li>
+            <li id="navButton"><a href="" target="_blank" class="nav-link">RESUME</a></li>
             <li id="navButton"><a href="#contact" class="nav-link">CONTACT</a></li>
         </ul>
     </nav>
