--- a/index.html
+++ b/index.html
@@ -45,12 +45,13 @@
         <div class="col-md-5">
             <article class="aboutMePara">
                 <h2>About Me</h2>
-                    <p>I am currently working through the freeCodeCamp curriculum and I previously attended the Eleven Fifty Academy for JavaScript. 
+                    <p>I am currently enrolled at Vincennes University for Web Programming. I am expected to graduate in December of 2021. 
+                        I previously attended the Eleven Fifty Academy for JavaScript. 
                         Once finished, I wish to launch my career as a developer. 
                         Most of my previous experience is in retail management with focus on operations and visual merchandising. </p>
                         <br>
-                        <p>I have always had a strong eye for design and look forward to starting my future in technology. My future 
-                            interest include building my project management skill set and moving into a Dev Ops Project Manager role.</p>
+                        <p>I have always had a strong eye for design and look forward to starting my future in technology. My long-term goals 
+                            include building my project management skill set and moving into a Dev Ops Project Manager role.</p>
                         <br>
                         <p>Below are a few of my projects I have completed while attending Eleven Fifty. Enjoy!</p>
             </article>
