Updated Resume Link

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -18,7 +18,7 @@
             <li id="navButton"><a href="#aboutMe" class="nav-link">ABOUT</a></li>
             <li id="navButton"><a href="#projectTitle" class="nav-link">PROJECTS</a></li>
             <li id="homeButton"><a href="#home" class="home-link">HOME</a></li>
-            <li id="navButton"><a href="" target="_blank" class="nav-link">RESUME</a></li>
+            <li id="navButton"><a href="assets/UpdatedResume2021.pdf" target="_blank" class="nav-link">RESUME</a></li>
             <li id="navButton"><a href="#contact" class="nav-link">CONTACT</a></li>
         </ul>
     </nav>
@@ -46,12 +46,12 @@
             <article class="aboutMePara">
                 <h2>About Me</h2>
                     <p>I am currently enrolled at Vincennes University for Web Programming. I am expected to graduate in December of 2021. 
-                        I previously attended the Eleven Fifty Academy for JavaScript. 
-                        Once finished, I wish to launch my career as a developer. 
-                        Most of my previous experience is in retail management with focus on operations and visual merchandising. </p>
+					I previously attended the Eleven Fifty Academy for JavaScript. 
+					Once finished, I wish to launch my career as a developer. 
+					Most of my previous experience is in retail management with focus on operations and visual merchandising.</p>
                         <br>
-                        <p>I have always had a strong eye for design and look forward to starting my future in technology. My long-term goals 
-                            include building my project management skill set and moving into a Dev Ops Project Manager role.</p>
+                        <p>I have always had a strong eye for design and look foward to starting my future in technology. My future 
+                            intrest include building my project management skill set and moving into a Dev Ops Project Manager role.</p>
                         <br>
                         <p>Below are a few of my projects I have completed while attending Eleven Fifty. Enjoy!</p>
             </article>
