--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 					Once finished, I wish to launch my career as a developer. 
 					Most of my previous experience is in retail management with focus on operations and visual merchandising.</p>
                         <br>
-                        <p>I have always had a strong eye for design and look forward to starting my future in technology. My future 
-                            interest include building my project management skill set and moving into a Dev Ops Project Manager role. </p>
+                        <p>I have always had a strong eye for design and look foward to starting my future in technology. My future 
+                            intrest include building my project management skill set and moving into a Dev Ops Project Manager role.</p>
                         <br>
                         <p>Below are a few of my projects I have completed while attending Eleven Fifty. Enjoy!</p>
             </article>
